# Dev-Blog

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  stress_testing.md
client/: Cargo.toml  Dockerfile  index.html
client/assets/fonts/: font.css
client/assets/styles/: media.css
client/src/: api.rs  api_url.txt  helpers.rs  main.rs  router.rs  theme.css
client/src/components/: carousel.rs  comment.rs  comment_add.rs  comment_delete.rs  comment_edit.rs  footer.rs  markdown.rs  mod.rs  navbar.rs  pager.rs  post.rs  post_delete.rs  post_edit.rs  text_input.rs  vote.rs
client/src/components/styles/: carousel.css  commentDelete.css  markdown.css  notifications.css  pager.css  post.css  postDelete.css  postEdit.css  textInput.css
client/src/icons/: icons.rs
client/src/pages/: about.rs  account.rs  home.rs  post_add.rs  sign_in.rs  sign_out.rs  sign_up.rs
client/src/pages/styles/: about.css  home.css  insights.css  posts.css  signUp.css
devblog/devblog/client/: .gitignore  Cargo.toml  index.html  trunk.toml
devblog/devblog/client/src/: api.rs  fonts.css  helpers.rs  lib.rs  main.rs  models.rs  router.rs  store.rs  theme.css
devblog/devblog/client/src/components/: add_comment.rs  comment.rs  comment_add.rs  comment_delete.rs  comment_edit.rs  footer.rs  mod.rs  navbar.rs  notifications.rs  pager.rs  post.rs  post_delete.rs  post_edit.rs  vote.rs
devblog/devblog/client/src/icons/: icons.rs
devblog/devblog/client/src/pages/: about.rs  account.rs  add_post.rs  home.rs  insights.rs  mod.rs  post_add.rs  (+5 more)
(+739 files in other folders)
