[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.11.0"
gloo-net = "0.5.0"
reqwasm = "0.5.0"
serde = "1.0.196"
serde_json = "1.0.113"
stylist = { version = "0.13.0", features = ["yew", "parser"] }
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
yewdux-functional = "0.1.0"
